--- a/buy.html
+++ b/buy.html
@@ -34,7 +34,7 @@
 <section class="product-page">
   <h1>ชื่อสินค้า</h1>
   <div class="product-gallery">
-    <img src="S__6504464.jpg" width="50%">
+    <img src="image/S__6504464.jpg" width="50%">
     <!-- รูปอื่นๆ -->
   </div>
   <div class="product-info">
@@ -144,3 +144,4 @@
 </body>
 
 </html>
+
