--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                <a href ="project.html" class = "hero-btn">learn more</a>
             </div>
             <div class="hero-img">
-                 <img src="c:\Users\User\OneDrive\รูปภาพ\Saved Pictures\S__6488134.jpg" >
+                 <img src="image/S__6488134.jpg" >
             </div>
          </div>
       </div>
@@ -127,4 +127,5 @@
          </div>
    </footer>  
 </body>
+
 </html>
