--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
      <h2 style="text-align: center; color: #4caf50; font-family: 'Kanit', sans-serif; font-weight: 700; font-size: 2.4rem; margin-bottom: 20px;">ผู้ก่อตั้งบริษัท</h2>
      <br>
     <div class ="pro">
-        <img src="c:\Users\User\OneDrive\รูปภาพ\(1) Instagram_files\419910337_3692732497630173_8596253722659155047_n.jpg" width="300" class="center-img">
+        <img src="image/419910337_3692732497630173_8596253722659155047_n.jpg" width="300" class="center-img">
     </div><br>
      <h3 style="text-align: center; color: #4caf50; ">นาย อัฏฐนิษฐ์ งามจินดาสกุล</h3><br>
      <p style="text-align: center; color: #4caf50 ;" >"บริษัท ริงริงชักกะโปกลิง ผ่านการนำเสนอผลิตภัณฑ์และบริการที่เป็นมิตรกับธรรมชาติ</p>
@@ -98,4 +98,5 @@
          </div>
    </footer>  
 </body>
+
 </html>
