--- a/project.html
+++ b/project.html
@@ -34,7 +34,7 @@
   <h2>welcome</h2>
   <div class="service-item">
     <h3 style="text-align: center;">ยินดีต้อนรับ</h3>
-    <img src="c:\Users\User\OneDrive\รูปภาพ\Saved Pictures\S__6488148.jpg" width="300" class="center-img"><br>
+    <img src="image/S__6488148.jpg" width="300" class="center-img"><br>
     <p>บริษัท ริงริงชักกะโปกลิง จำกัด มหาชน ด้วยความมุ่งมั่นที่จะสร้างความเปลี่ยนแปลงเชิงบวกในสังคมและโลกใบนี้ เรานำเสนอสินค้าที่คัดสรรมาอย่างพิถีพิถัน ทั้งวัสดุรีไซเคิลและวัสดุที่สามารถย่อยสลายได้ ช่วยลดผลกระทบต่อสิ่งแวดล้อมในทุกขั้นตอน ตั้งแต่การผลิต การจัดส่ง ไปจนถึงการใช้งานของลูกค้า
 
 เรามองว่าการรักษ์โลกไม่ใช่แค่หน้าที่ของใครคนใดคนหนึ่ง แต่เป็นภารกิจร่วมของทุกคน และบริษัทเราพร้อมเป็นส่วนหนึ่งของการเปลี่ยนแปลงนี้โดยการสนับสนุนและส่งเสริมให้ลูกค้าและพันธมิตรสามารถเข้าถึงผลิตภัณฑ์ที่มีความรับผิดชอบต่อสิ่งแวดล้อมได้อย่างง่ายดายและสะดวกสบาย นอกจากนี้ เรายังให้บริการคำปรึกษาเกี่ยวกับแนวทางการดำเนินชีวิตและธุรกิจที่ยั่งยืน เพื่อสร้างผลกระทบที่ยาวนานและเป็นบวกต่อโลกใบนี้
@@ -45,4 +45,5 @@
 
        
 </body>
+
 </html>
